--- a/public/layout.pug
+++ b/public/layout.pug
@@ -2,5 +2,12 @@ doctype html
 html
   head
     title Memo DB
-  body
-    block content
+    link(rel="stylesheet", href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css", integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T", crossorigin="anonymous")
+    style
+      include style.css
+  body.bg-light
+    .jumbotron
+      .container
+        h1 NOTES APP
+    main.container
+      block content
